Update to Java 17 and Minecraft 1.18.1